add_library(dfs dfs.cpp)
add_library(bfs bfs.cpp)
add_library(find_cycle find_cycle.cpp)
add_library(tps tps.cpp)
add_library(kosaraju kosaraju.cpp)
add_library(condensation condensation.cpp)
add_library(find_hamiltonian_cycle find_hamiltonian_cycle.cpp)
add_library(find_euler_cycle find_euler_cycle.cpp)
add_library(kraskal kraskal.cpp)
add_library(prima prima.cpp)
add_library(bellman_ford bellman_ford.cpp)
add_library(dag dag.cpp)
add_library(dijkstra dijkstra.cpp)
add_library(floyd_warshall floyd_warshall.cpp)
add_library(kun kun.cpp)
add_library(ford_fulkerson ford_fulkerson.cpp)
add_library(edmonds_karp edmonds_karp.cpp)
add_library(bridges_ap bridges_ap.cpp)

add_library(rabin_karp rabin_karp.cpp)
add_library(prefix_function prefix_function.cpp)
add_library(z_function z_function.cpp)